--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,12 @@
   <build>
     <finalName>pipeline</finalName>
   </build>
+<distributionManagement>
+  <site>
+    <id>ponmurugan</id>
+    <url>http://localhost:8081/nexus/content/sites/ponmurugan</url>
+  </site>
+</distributionManagement>
+
 </project>
+
