--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>ponmurugan</groupId>
+      <artifactId>ponmurugan</artifactId>
+      <version>1</version>
+      <scope>compile</scope>
+</dependency>
   </dependencies>
   <build>
     <finalName>pipeline</finalName>
